vertical scrollbar fixed. new zine page for tsrom.

--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,8 @@ html {
     margin-bottom: 1em;
   }
   #navbar {display: none;}
-  .subnav-bk {display: none;}
+  .subnav-bk {
+    display: none;}
   .subsubnav {display: none;}
   #landing-page-slideshow {
     display: block;
@@ -362,7 +363,6 @@ html {
   }
   ul.subnav-bk {
     list-style-type: none;
-    margin-top: 20vh;
     margin-left: 14vw;
     padding: 0;
     width: 21.5%;
@@ -370,6 +370,7 @@ html {
     line-height: 3vh;
     position: fixed; /* Make it stick, even on scroll */
     overflow: auto; /* Enable scrolling if the sidenav has too much content */
+    overflow-y: auto;
   }
   ul.subsubnav {
     list-style-type: none;
